--- a/app/src/main/res/layout-land/activity_aids.xml
+++ b/app/src/main/res/layout-land/activity_aids.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="88dp"
+            android:layout_marginTop="80dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:text="Aids\n\n A AIDS, Síndrome da Imunodeficiência Adquirida é uma doença do sistema imunológico humano resultante da infecção pelo HIV o vírus da Imunodeficiência Humana, lembrando que nem todo mundo que vive com HIV chega a desenvolver a aids por isso há diferença entre os termos. Pertencente ao grupo de DOENÇAS DE CONDIÇÕES CRÔNICAS E INFECÇÕES SEXUALMENTE TRANSMISSÍVEIS (DCCI), ela é uma doença infectocontagiosa para qual ainda não existe cura. Uma pessoa pode ser acometida por aids durante sexo vaginal, oral ou anal sem proteção, de mãe para bebê durante a gravidez, parto ou amamentação e por produtos sanguíneos, como agulhas utilizadas ou sangue não testado. Atacando o sistema imunológico que é o responsável por defender o organismo de doenças com o enfraquecimento do sistema imunológico do corpo, o organismo fica mais exposto à doenças, principalmente às que são causada por vírus, fungos e bactérias, que vão de um simples resfriado a infecções mais graves como tuberculose ou câncer, isso se deve aos linfócitos T CD4+, que são as células mais atingidas pelo vírus e que são responsáveis por coordenar a função de defesa imunológica contra tal. A Aids pode apresentar dores no abdômen, dor ao engolir, febre, cansaço, dores no corpo, manchas avermelhadas na pele, aumento de ínguas, perda de apetite e de peso, depressão, sintomas gastrointestinais (como náuseas, vômitos e diarreia), feridas na boca e dores ou inchaço na região genitália. Durante a infecção inicial, o contaminado passa por um breve período doente, com sintomas semelhantes aos da gripe. Normalmente essa ocorrência persiste por um período prolongado sem qualquer outro sintoma. Com o processo da doença e a fragilidade do sistema imunológico, a pessoa se torna muito mais propensa a ter outros tipos de doenças oportunistas, que geralmente não afetam as pessoas com um sistema imunológico saudável. O diagnóstico da infecção é feito a partir da coleta de amostras de sangue (Elisa anti-HIV) ou por fluido No Brasil, temos os exames laboratoriais e os testes rápidos. Não existe cura para a aids, mas um abono estrita aos regimes antirretrovirais (ARVs) pode atrasar significativamente a evolução da doença, assim como prevenir infecções secundárias e complicações, o tratamento é disponibilizado pelo SISTEMA ÚNICO DE SAÚDE (SUS) e acompanhado pela UNIDADE BÁSICA DE SAÚDE (UBS) com total confidencialidade. Existe uma estratégia denominada prevenção combinada, nela contém 3 tipos diferentes de abordagens de prevenção com intuito de reduzir a propagação do vírus, elas são: intervenções biomédica (distribuições de camisinhas tanto masculina quanto feminina e gel lubrificante), comportamental (incentivo ao uso das camisinhas, aconselhamento em HIV/aids e outras IST, como também a educação, incentivo à testagem, adesão às intervenções biomédicas...) e socioestrutural (promoção e defesa dos direitos humanos, ações de enfrentamento ao racismo, homofobia e demais preconceitos, campanhas educativas e de conscientização). "
@@ -29,19 +29,20 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="439dp"
-            android:layout_height="99dp"
+            android:layout_width="743dp"
+            android:layout_height="85dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="1dp"
             android:layout_marginRight="1dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.615"
+            app:layout_constraintHorizontal_bias="0.695"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@drawable/lite___cima" />
+            app:srcCompat="@drawable/cima___great" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
