--- a/app/src/main/res/layout-land/activity_questionario.xml
+++ b/app/src/main/res/layout-land/activity_questionario.xml
@@ -8,7 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#F8F8FF" >
 
         <TextView
             android:id="@+id/textView"
@@ -516,6 +517,9 @@
             app:layout_constraintStart_toEndOf="@+id/checkBox35"
             app:layout_constraintTop_toBottomOf="@+id/checkBox34" />
 
+
+
+
         <TextView
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
@@ -526,7 +530,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="28dp"
-            android:text="=============================================================================="
+            android:text=""
             android:textColor="@android:color/black"
             android:textSize="16dp"
             app:layout_constraintBottom_toTopOf="@+id/textView19"
@@ -541,11 +545,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="31dp"
-            android:layout_marginBottom="147dp"
+            android:background="@drawable/respost"
             android:text="De acordo com as suas respostas vamos ter informar qual a probabilidade de você ter uma doença. Após responder o questionário, clique em resultado e terá a sua resposta. Ela aparecerá logo abaixo:"
             android:textColor="@android:color/black"
             android:textSize="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView18" />
@@ -555,6 +558,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
+            android:background="@drawable/respost"
             android:textSize="16dp"
             app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="parent"
@@ -566,7 +570,7 @@
             android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="=============================================================================="
+            android:text=""
             android:textColor="@android:color/black"
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -988,6 +992,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView19" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
