--- a/app/src/main/res/layout-land/activity_questionario.xml
+++ b/app/src/main/res/layout-land/activity_questionario.xml
@@ -432,8 +432,8 @@
             android:id="@+id/dor_garganta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="55dp"
-            android:layout_marginLeft="55dp"
+            android:layout_marginStart="51dp"
+            android:layout_marginLeft="51dp"
             android:layout_marginTop="8dp"
             android:text="Dor de garganta"
             app:layout_constraintStart_toStartOf="parent"
@@ -456,8 +456,8 @@
             android:id="@+id/falta_ar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="55dp"
-            android:layout_marginLeft="55dp"
+            android:layout_marginStart="51dp"
+            android:layout_marginLeft="51dp"
             android:layout_marginTop="8dp"
             android:text="Falta de ar"
             app:layout_constraintStart_toStartOf="parent"
@@ -491,10 +491,12 @@
 
         <Button
             android:id="@+id/resultado_questionario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="113dp"
+            android:layout_height="41dp"
             android:layout_marginTop="100dp"
+            android:background="#6AA3EA"
             android:text="Resultado"
+            android:textColor="@color/cardview_light_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.093"
             app:layout_constraintStart_toStartOf="parent"
@@ -545,7 +547,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="31dp"
-            android:background="@drawable/respost"
             android:text="De acordo com as suas respostas vamos ter informar qual a probabilidade de você ter uma doença. Após responder o questionário, clique em resultado e terá a sua resposta. Ela aparecerá logo abaixo:"
             android:textColor="@android:color/black"
             android:textSize="16dp"
@@ -558,7 +559,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
-            android:background="@drawable/respost"
             android:textSize="16dp"
             app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="parent"
@@ -847,7 +847,7 @@
                 android:id="@+id/radioButton29"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sim" />
+                android:text="Não" />
         </RadioGroup>
 
         <RadioGroup
@@ -910,8 +910,8 @@
             android:id="@+id/dores_articulacoes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginLeft="28dp"
+            android:layout_marginStart="27dp"
+            android:layout_marginLeft="27dp"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="284dp"
             android:layout_marginRight="284dp"
@@ -986,6 +986,8 @@
             android:layout_marginEnd="177dp"
             android:layout_marginRight="177dp"
             android:layout_marginBottom="17dp"
+            android:background="#6AA3EA"
+            android:textColor="@color/cardview_light_background"
             android:text="Ver informações sobre a doença"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/textView20"
