--- a/app/src/main/res/layout/activity_questionario.xml
+++ b/app/src/main/res/layout/activity_questionario.xml
@@ -461,8 +461,8 @@
             android:id="@+id/perda_paladar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginLeft="2dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="8dp"
             android:text="Perda do paladar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -474,25 +474,35 @@
             android:id="@+id/perda_oufato"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="136dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="249dp"
+            android:layout_marginRight="249dp"
+            android:layout_marginBottom="28dp"
             android:text="Perda do oufato"
+            app:layout_constraintBottom_toTopOf="@+id/resultado_questionario"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/nauseas"
-            app:layout_constraintTop_toBottomOf="@+id/textView17" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/formigamento" />
 
         <Button
             android:id="@+id/resultado_questionario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_width="110dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="283dp"
+            android:layout_marginRight="283dp"
+            android:layout_marginBottom="43dp"
+            android:background="#6AA3EA"
             android:text="Resultado"
+            android:textColor="@color/cardview_light_background"
+            app:layout_constraintBottom_toTopOf="@+id/textView18"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.093"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/falta_ar" />
+            app:layout_constraintTop_toBottomOf="@+id/perda_oufato" />
 
         <CheckBox
             android:id="@+id/checkBox"
@@ -526,7 +536,6 @@
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:textColor="@android:color/black"
-            android:background="@drawable/respost"
             android:textSize="16dp"
             app:layout_constraintBottom_toTopOf="@+id/textView19"
             app:layout_constraintEnd_toEndOf="parent"
@@ -542,7 +551,6 @@
             android:layout_marginBottom="147dp"
             android:text="De acordo com as suas respostas vamos ter informar qual a probabilidade de você ter uma doença. Após responder o questionário, clique em resultado e terá a sua resposta. Ela aparecerá logo abaixo:"
             android:textColor="@android:color/black"
-            android:background="@drawable/respost"
             android:textSize="16dp"
             app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="parent"
@@ -555,7 +563,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
-            android:background="@drawable/respost"
             android:textSize="16dp"
             app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="parent"
@@ -905,16 +912,15 @@
             android:id="@+id/dores_articulacoes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginLeft="28dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="284dp"
-            android:layout_marginRight="284dp"
-            android:layout_marginBottom="62dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="4dp"
             android:text="Dores nas articulações"
-            app:layout_constraintBottom_toTopOf="@+id/resultado_questionario"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toTopOf="@+id/formigamento"
+            app:layout_constraintEnd_toStartOf="@+id/bolhas_pele"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/falta_ar" />
 
@@ -922,34 +928,26 @@
             android:id="@+id/bolhas_pele"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="53dp"
-            android:layout_marginRight="53dp"
-            android:layout_marginBottom="110dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="57dp"
+            android:layout_marginRight="57dp"
             android:text="Bolhas na pele"
-            app:layout_constraintBottom_toTopOf="@+id/textView18"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/dores_articulacoes"
-            app:layout_constraintTop_toBottomOf="@+id/perda_paladar"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/perda_paladar" />
 
         <CheckBox
             android:id="@+id/formigamento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginLeft="28dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginEnd="289dp"
-            android:layout_marginRight="289dp"
-            android:layout_marginBottom="29dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginLeft="36dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginRight="9dp"
+            android:layout_marginBottom="4dp"
             android:text="Formigamento"
-            app:layout_constraintBottom_toTopOf="@+id/resultado_questionario"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toTopOf="@+id/perda_oufato"
+            app:layout_constraintEnd_toStartOf="@+id/irritacao_olhos"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dores_articulacoes" />
 
@@ -957,19 +955,16 @@
             android:id="@+id/irritacao_olhos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginLeft="36dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="129dp"
-            android:layout_marginRight="129dp"
-            android:layout_marginBottom="115dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="99dp"
+            android:layout_marginRight="99dp"
             android:text="Irritação nos olhos"
-            app:layout_constraintBottom_toTopOf="@+id/textView18"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.27"
             app:layout_constraintStart_toEndOf="@+id/formigamento"
-            app:layout_constraintTop_toBottomOf="@+id/dores_articulacoes"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/bolhas_pele" />
 
         <Button
             android:id="@+id/botao_informacao"
@@ -981,13 +976,14 @@
             android:layout_marginEnd="177dp"
             android:layout_marginRight="177dp"
             android:layout_marginBottom="17dp"
+            android:background="#6AA3EA"
+            android:textColor="@color/cardview_light_background"
             android:text="Ver informações sobre a doença"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView19" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
