--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -20,8 +20,10 @@
             android:layout_width="250dp"
             android:layout_height="141dp"
             android:layout_marginTop="10dp"
-            android:background="#0028387C"
-            android:drawableBottom="@drawable/botao_questionario"
+            android:background="#3A73BA"
+            android:text="QUESTIONÁRIO"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="40px"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView22" />
