--- a/app/src/main/res/layout-land/activity_inicial.xml
+++ b/app/src/main/res/layout-land/activity_inicial.xml
@@ -17,11 +17,13 @@
 
         <Button
             android:id="@+id/questionario_botao"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="142dp"
             android:layout_marginTop="10dp"
-            android:background="#0028387C"
-            android:drawableBottom="@drawable/botao_questionario"
+            android:background="#3A73BA"
+            android:text="QUESTIONÁRIO"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="40px"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView22" />
